# PseudoCodigoWrapper

./: .gitignore  CMakeLists.txt  README.md  doc_esp.md
PseudoCodeWrapper/: CMakeLists.txt  PseudoCodeWrapper.hpp  main.cpp
demo/: CMakeLists.txt  demo.cpp
test/: CMakeLists.txt  test.cpp
